# halcyon

./: .gitignore  Cargo.toml  SECURITY.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability-report.md
.github/workflows/: ci.yml
src/: config.rs  ha_api.rs  main.rs
src/config/: mod.rs
src/ha_api/: errors.rs  mod.rs  types.rs
