[package]
name = "halcyon"
version = "0.1.0"
authors = ["Bradley Nelson <bradleynelson102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
mdns = "1.1.0"
termion = "^1.5.5"
directories = "3.0.1"
log = "0.4"
fern = "0.5"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
rand = "0.7.3"
sysinfo = "0.15.3"